Add security logging, mail support, and URI fixes
Introduce authentication logging and a custom login failure handler, wire the handler into SecurityConfig, and enable showing security-level logs. Add Spring Boot mail dependency and protect password recovery emails by making JavaMailSender optional (log and skip if not configured). Standardize image URL handling by converting String -> URI -> URL and propagate URISyntaxException through service/controller signatures and tests. Add lombok.version property and configure annotationProcessorPaths in parent and module POMs; update module POMs to reference the explicit Lombok version. Minor config tweaks: default DB schema, log path resolution, a prod profile to exclude dev properties from WAR, and a new flag to control showing auth exceptions on the login page.